--- a/public/index.html
+++ b/public/index.html
@@ -2,42 +2,56 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <title>Soundboard Rodrigo Faro</title>
+
+    <!-- Importing Favicon -->
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+
+    <!-- Importing Font Awesome Kit -->
+    <script src="https://kit.fontawesome.com/f00399ffb8.js" crossorigin="anonymous"></script>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+    <!-- Importing Audio files -->
+    <audio id="q" src="%PUBLIC_URL%/audios/queisso.mp3"></audio>
+    <audio id="w" src="%PUBLIC_URL%/audios/semgraca.mp3"></audio>
+    <audio id="e" src="%PUBLIC_URL%/audios/poin.mp3"></audio>
+    <audio id="r" src="%PUBLIC_URL%/audios/pom.mp3"></audio>
+    <audio id="t" src="%PUBLIC_URL%/audios/tome.mp3"></audio>
+    <audio id="y" src="%PUBLIC_URL%/audios/pare.mp3"></audio>
+    <audio id="u" src="%PUBLIC_URL%/audios/uuuii.mp3"></audio>
+    
+    <audio id="a" src="%PUBLIC_URL%/audios/ai.mp3"></audio>
+    <audio id="s" src="%PUBLIC_URL%/audios/soco.mp3"></audio>
+    <audio id="d" src="%PUBLIC_URL%/audios/danca.mp3"></audio>
+    <audio id="f" src="%PUBLIC_URL%/audios/fail.mp3"></audio>
+    <audio id="g" src="%PUBLIC_URL%/audios/elegosta.mp3"></audio>
+    <audio id="h" src="%PUBLIC_URL%/audios/potencia.mp3"></audio>
+    <audio id="j" src="%PUBLIC_URL%/audios/jesus.mp3"></audio>
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <audio id="z" src="%PUBLIC_URL%/audios/abrluabrlua.mp3"></audio>
+    <audio id="x" src="%PUBLIC_URL%/audios/xiii.mp3"></audio>
+    <audio id="c" src="%PUBLIC_URL%/audios/cavalo.mp3"></audio>
+    <audio id="v" src="%PUBLIC_URL%/audios/demais.mp3"></audio>
+    <audio id="b" src="%PUBLIC_URL%/audios/brincadeira.mp3"></audio>
+    <audio id="n" src="%PUBLIC_URL%/audios/nao.mp3"></audio>
+    <audio id="m" src="%PUBLIC_URL%/audios/naodeu.mp3"></audio>
+    
+    <audio id="1" src="%PUBLIC_URL%/audios/bgm/bgm1.mp3"></audio>
+    <audio id="2" src="%PUBLIC_URL%/audios/bgm/bgm2.mp3"></audio>
+    <audio id="3" src="%PUBLIC_URL%/audios/bgm/bgm3.mp3"></audio>
+
+
+    <!-- Importing Javascript File -->
+    <script src="%PUBLIC_URL%/js/main.js"></script>
   </body>
 </html>
