--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,16 @@
     <!-- Importing Font Awesome Kit -->
     <script src="https://kit.fontawesome.com/f00399ffb8.js" crossorigin="anonymous"></script>
 
+    <!-- Social Twitter -->
+    <!-- After inserting META need to validate at https://dev.twitter.com/docs/cards/validation/validator -->
+    <meta name="twitter:card" content="player"></meta>
+    <meta name="twitter:site" content="@ldequadra"></meta>
+    <meta name="twitter:creator" content="@ldequadra"></meta>
+    <meta name="twitter:title" content="Instant Faro"></meta>
+    <meta name="twitter:description" content="Soundboard com efeitos sonoros do programa do Rodrigo Faro."></meta>
+    <meta name="twitter:image" content="img/social.png"></meta>
+    <meta name="twitter:image:alt" content="Banner mostrando uma prévia do site."></meta>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -51,7 +61,7 @@
     <audio id="3" src="%PUBLIC_URL%/audios/bgm/bgm3.mp3"></audio>
 
 
-    <!-- Importing Javascript File -->
+    <!-- Importing Javascript Files -->
     <script src="%PUBLIC_URL%/js/main.js"></script>
   </body>
 </html>
