Update Twitter Meta

--- a/public/index.html
+++ b/public/index.html
@@ -18,13 +18,11 @@
 
     <!-- Social Twitter -->
     <!-- After inserting META need to validate at https://dev.twitter.com/docs/cards/validation/validator -->
-    <meta name="twitter:card" content="player"></meta>
-    <meta name="twitter:site" content="@ldequadra"></meta>
-    <meta name="twitter:creator" content="@ldequadra"></meta>
-    <meta name="twitter:title" content="Instant Faro"></meta>
-    <meta name="twitter:description" content="Soundboard com efeitos sonoros do programa do Rodrigo Faro."></meta>
-    <meta name="twitter:image" content="img/social.png"></meta>
-    <meta name="twitter:image:alt" content="Banner mostrando uma prévia do site."></meta>
+    <meta name="twitter:card" content="player" />
+    <meta name="twitter:site" content="@ldequadra" />
+    <meta name="twitter:title" content="Instant Faro" />
+    <meta name="twitter:description" content="Soundboard com efeitos sonoros do programa do Rodrigo Faro." />
+    <meta name="twitter:image" content="img/social.png" />
 
   </head>
   <body>
