Improve main.js file execution

--- a/public/index.html
+++ b/public/index.html
@@ -60,6 +60,6 @@
 
 
     <!-- Importing Javascript Files -->
-    <script src="%PUBLIC_URL%/js/main.js"></script>
+    <script type="module" src="%PUBLIC_URL%/js/main.js"></script>
   </body>
 </html>
